--- a/scss/dependencies/_no-insurance.scss
+++ b/scss/dependencies/_no-insurance.scss
@@ -34,6 +34,7 @@
   .button {
     margin-top:60px;
     max-width:275px;
+    width:325px;
   }
   @media (max-width:1200px) {
     background-image:none;
