--- a/scss/main.scss
+++ b/scss/main.scss
@@ -69,6 +69,10 @@ p {
     text-shadow:none;
     color:#FFF !important;
   }
+  @media (max-width:480px) {
+    max-width:275px;
+    font-size:16px;
+  }
 }
 .phone-slug {
   a:hover {
