--- a/scss/dependencies/_smile-gallery.scss
+++ b/scss/dependencies/_smile-gallery.scss
@@ -2,7 +2,7 @@
   background:#2A9FBB;
   h2 {
     font-weight:900 !important;
-    color:#46727C !important;
+    color:#FFF !important;
   }
   p {
     color:#424242;
