--- a/scss/dependencies/_reviews.scss
+++ b/scss/dependencies/_reviews.scss
@@ -8,6 +8,7 @@
     font-weight:900 !important;
     font-size:44px;
     margin-bottom:50px;
+    color:#FFF;
   }
   .bf-dv {
     padding-top:50px !important;
