--- a/scss/dependencies/_services.scss
+++ b/scss/dependencies/_services.scss
@@ -10,12 +10,23 @@
   h2 {
     font-weight:900 !important;
     font-size:48px;
+    @media (max-width:767px) {
+      text-align:left;
+      padding:0 15px;
+    }
   }
   p {
     font-size:16px;
+
     a {
       text-decoration:underline;
       color:#5F8801;
+    }
+  }
+  .description-text {
+    @media (max-width:767px) {
+        text-align:left;
+        padding:0 15px;
     }
   }
   h3 {
@@ -149,4 +160,5 @@
       font-size:18px;
     }
   }
+
 }
