--- a/scss/dependencies/_reviews.scss
+++ b/scss/dependencies/_reviews.scss
@@ -9,6 +9,7 @@
     font-size:44px;
     margin-bottom:50px;
     color:#FFF;
+    text-shadow:2px 2px 6px black;
   }
   .bf-dv {
     padding-top:50px !important;
